--- a/views/login.pug
+++ b/views/login.pug
@@ -22,7 +22,7 @@ block content
 		
 		// --------------- Welcome Panel
 		#welcomePanel
-			h2(style="font-weight: 600;") WELCOME TO THE MARBLES
+			h2(style="font-weight: 600;") WELCOME TO Fleetchain POC
 
 			#adminText
 				span Hello again 
